--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -16,32 +16,15 @@
             <th>City</th>
             <th>Status</th>
             <!-- <th></th> -->
-            
+
         </tr>
 
-        <tr *ngFor="let customer of listCustomer" [routerLink]="['/customers/' + customer.id]" >
+        <tr *ngFor="let customer of listCustomer" [routerLink]="['/customers/' + customer.id]">
             <td *ngIf="searchFunction(customer)">{{ customer.customerNumber }}</td>
             <td *ngIf="searchFunction(customer)">{{ customer.name }}</td>
             <td *ngIf="searchFunction(customer)">{{ customer.city }}</td>
             <td *ngIf="searchFunction(customer)">{{ customer.status }}</td>
 
-            <!-- <td *ngIf="searchFunction(customer)">
-                <button [matMenuTriggerFor]="menuHeader" class="icon-more-options" mat-icon-button>
-                    <mat-icon color="primary">more_vert</mat-icon>
-                </button>
-
-                <mat-menu #menuHeader="matMenu">
-                    <button mat-menu-item (click)="editCustomer(customer)">
-                        <mat-icon color="primary">edit</mat-icon>
-                        Edit customer
-                    </button>
-
-                    <button mat-menu-item (click)="deleteCustomer(customer)">
-                        <mat-icon color="warn">delete</mat-icon>
-                        Delete customer
-                    </button>
-                </mat-menu>
-            </td> -->
         </tr>
 
     </table>
@@ -49,7 +32,7 @@
 </mat-card>
 
 
-<button (click)="openDialogAddCustomer()" matTooltip="Add Customer" [matTooltipPosition]="'above'" class="btn-add" mat-fab
-    color="primary" aria-label="Example icon button with a delete icon">
+<button (click)="openDialogAddCustomer()" matTooltip="Add Customer" [matTooltipPosition]="'above'" class="btn-add"
+    mat-fab color="primary" aria-label="Example icon button with a delete icon">
     <mat-icon>add</mat-icon>
 </button>
