--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<p>dashboard works!</p>
+<div class="container-statistics">
+
+    <h2>Sales statistics</h2>
+
+    <div>
+        <canvas id="canvas">{{chart}}</canvas>
+    </div>
+
+</div>
