bar chart ready

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,28 @@
-<div class="container-statistics">
+<div class="container-dashboard">
 
-    <h2>Sales statistics</h2>
 
-    <div>
-        <canvas id="canvas">{{chart}}</canvas>
+    <div class="container-sales-statistics">
+        <h2>Sales statistics</h2>
+        <div>
+            <canvas class="chart-sales-statistic" id="canvas-sales">{{chartSalesStatistic}}</canvas>
+        </div>
     </div>
+
+
+    <div class="container-order-statistics">
+        <h2>Order statistics</h2>
+        <div>
+            <canvas class="chart-order-statistics" id="canvas-orders"></canvas>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
 
 </div>
