--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -9,3 +9,29 @@
 .chart-sales-statistic {
     min-height: 240px;
 }
+
+
+.container-charts {
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+}
+
+.container-average-oder-value {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+
+.value-average-order {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.container-order-status {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
