optimized dashboard and several improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
 
     <div class="container-drawer-content">
       <ul>
-        <li routerLink=""><mat-icon>dashboard</mat-icon>Dashboard</li>
-        <li routerLink="user"><mat-icon>perm_identity</mat-icon>Users</li>
-        <li routerLink="notes"><mat-icon>note</mat-icon>Notes</li>
-        <li routerLink="articles"><mat-icon>article</mat-icon>Articles</li>
-        <li routerLink="customers"><mat-icon>group</mat-icon>Customers</li>
-        <li routerLink="orders"><mat-icon>sell</mat-icon>Orders</li>
-        <li routerLink="datamanagement"><mat-icon>storage</mat-icon>Data Management</li>
+        <li routerLinkActive="active" routerLink="dashboard"><mat-icon>dashboard</mat-icon>Dashboard</li>
+        <li routerLinkActive="active" routerLink="user"><mat-icon>perm_identity</mat-icon>Users</li>
+        <li routerLinkActive="active" routerLink="notes"><mat-icon>note</mat-icon>Notes</li>
+        <li routerLinkActive="active" routerLink="articles"><mat-icon>article</mat-icon>Articles</li>
+        <li routerLinkActive="active" routerLink="customers"><mat-icon>group</mat-icon>Customers</li>
+        <li routerLinkActive="active" routerLink="orders"><mat-icon>sell</mat-icon>Orders</li>
+        <li routerLinkActive="active" routerLink="datamanagement"><mat-icon>storage</mat-icon>Data Management</li>
       </ul>
 
 
