--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,37 +1,30 @@
 <div class="container-dashboard">
-
-    <div class="container-order-statistics">
-        <h2>Sales statistics</h2>
-        <div class="container-charts">
-
-            <div class="container-sales-customer">
-                <h3>Order volume per customer</h3>
-                <canvas class="chart-sales-statistic" id="canvas-sales">{{chartSalesStatistic}}</canvas>
-            </div>
-
-            <div class="container-average-oder-value">
-                <h3>Average order value</h3>
-                <span class="value-average-order">{{ averageOderValue | currency: 'USD':'symbol':'1.2-2' }}</span>
-            </div>
-
-            <div class="container-order-status">
-                <h3>Orders by status</h3>
-                <canvas class="chart-order-statistics" id="canvas-orders"></canvas>
-            </div>
-
-            <div class="container-orders-by-date">
-                <h3>Order value by delivery date (Pending & Processing)</h3>
-                <canvas class="chart-order-delivery-date" id="canvas-orders-delivery-date"></canvas>
-            </div>
+    <h1>Sales statistics</h1>
 
 
+    <div class="container-charts">
 
+        <div class="single-chart container-sales-customer">
+            <h3>Order volume per customer</h3>
+            <canvas class="chart-sales-statistic" id="canvas-sales">{{chartSalesStatistic}}</canvas>
         </div>
 
+        <div class="single-chart container-average-oder-value">
+            <h3>Average order value</h3>
+            <span class="value-average-order">{{ averageOderValue | currency: 'USD':'symbol':'1.2-2' }}</span>
+        </div>
 
+        <div class="single-chart container-order-count-status">
+            <h3>Order count and value by status</h3>
+            <canvas class="chart-order-statistics" id="canvas-orders"></canvas>
+        </div>
+
+        <div class="single-chart container-orders-by-date">
+            <h3>Order value by delivery date (Pending & Processing)</h3>
+            <canvas class="chart-order-delivery-date" id="canvas-orders-delivery-date"></canvas>
+        </div>
 
     </div>
-
 
 
 
