--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,4 +1,46 @@
 .container-dashboard {
+    padding: 8px 64px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-charts {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 64px;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.single-chart {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    max-width: 900px;
+}
+
+
+.value-average-order {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.container-order-count-status {
+    width: 75%;
+    max-width: 600px;
+}
+
+
+
+
+
+
+
+/* .container-dashboard {
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -54,4 +96,4 @@
     align-items: center;
     width: 100%;
     max-width: 100%;
-}
+} */
