added intro animation

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -92,3 +92,15 @@ ul {
 .active {
     background-color: rgba(0, 0, 0, 0.1);
 }
+
+
+app-intro {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
