--- a/src/app/customer-detail/customer-detail.component.html
+++ b/src/app/customer-detail/customer-detail.component.html
@@ -65,9 +65,9 @@
     <!-- Template Orders for Customer -->
     <h2 class="h2-orders">Order history:</h2>
 
-
-    <app-orders [inputFilterCustomer]="customerID"></app-orders>
-
+    <div class="styles-for-customer-details">
+        <app-orders [inputFilterCustomer]="customerID"></app-orders>
+    </div>
 
 
 </div>
