--- a/src/app/dialog-edit-note/dialog-edit-note.component.html
+++ b/src/app/dialog-edit-note/dialog-edit-note.component.html
@@ -2,7 +2,7 @@
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 </div>
 
-<h1 mat-dialog-title>Add note</h1>
+<h1 mat-dialog-title>Edit note</h1>
 
 <div mat-dialog-content>
     <div class="container-input-title">
