--- a/src/app/dialog-add-position-to-order/dialog-add-position-to-order.component.html
+++ b/src/app/dialog-add-position-to-order/dialog-add-position-to-order.component.html
@@ -14,12 +14,12 @@
     <table class="mat-elevation-z8">
 
         <tr class="first-row">
-            <th>Article #</th>
-            <th>Article Desc</th>
+            <th>#</th>
+            <th>Desc</th>
             <th>Price</th>
             <th>Category</th>
-            <th>Supplier</th>
-            <th>Status</th>
+            <th class="hide-on-mobile">Supplier</th>
+            <th class="hide-on-mobile">Status</th>
 
         </tr>
 
@@ -30,8 +30,8 @@
                 <td class="text-align-end" *ngIf="searchFunction(article)">{{ article.price | currency:
                     'USD':'symbol':'1.2-2' }}</td>
                 <td *ngIf="searchFunction(article)">{{ article.category }}</td>
-                <td *ngIf="searchFunction(article)">{{ article.supplier }}</td>
-                <td *ngIf="searchFunction(article)">{{ article.status }}</td>
+                <td class="hide-on-mobile" *ngIf="searchFunction(article)">{{ article.supplier }}</td>
+                <td class="hide-on-mobile" *ngIf="searchFunction(article)">{{ article.status }}</td>
             </tr>
         </ng-container>
 
