--- a/src/app/dialog-edit-article/dialog-edit-article.component.html
+++ b/src/app/dialog-edit-article/dialog-edit-article.component.html
@@ -2,7 +2,7 @@
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 </div>
 
-<h1 mat-dialog-title>Add Article</h1>
+<h1 mat-dialog-title>Edit Article</h1>
 <div mat-dialog-content>
 
     <div class="container-itemNumber-itemDesc">
