--- a/src/app/dialog-edit-user/dialog-edit-user.component.scss
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.scss
@@ -7,6 +7,13 @@
     display: flex;
     gap: 16px;
     padding: 4px 0;
+
+    @media (max-width: 850px) {
+        flex-direction: column;
+    }
+
+
+
 }
 
 .container-input-birthday {
