--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,10 +1,19 @@
 .btn-add {
     position: fixed;
-    bottom: 56px;
-    right: 56px;
+    top: 64px;
+    right: 64px;
+
+    @media (max-width: 850px) {
+        right: 4px;
+        top: 60px;
+    }
 }
 
-
+mat-form-field {
+    @media (max-width: 850px) {
+        max-width: 200px;
+    }
+}
 
 
 
@@ -32,6 +41,15 @@ table {
 
     td {
         padding: 4px;
+
+        @media (max-width: 850px) {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            word-wrap: break-word;
+            white-space: nowrap;
+            max-width: 50px
+        }
+
     }
 
     th {
@@ -55,4 +73,10 @@ table {
         cursor: unset !important;
     }
 
+}
+
+.hide-on-mobile {
+    @media (max-width: 850px) {
+        display: none;
+    }
 }
