responsive ready to deploy

--- a/src/app/data-management/data-management.component.html
+++ b/src/app/data-management/data-management.component.html
@@ -19,8 +19,8 @@
             <tr *ngFor="let category of listCategories">
                 <td>{{ category.name }}</td>
                 <td class="text-align-end">
-                    <mat-icon color="primary" (click)="openDialogEditCategory(category)">edit</mat-icon>
-                    <mat-icon color="warn" (click)="openDialogDeleteCategory(category)">delete</mat-icon>
+                    <mat-icon class="icon-edit-delete" color="primary" (click)="openDialogEditCategory(category)">edit</mat-icon>
+                    <mat-icon class="icon-edit-delete" color="warn" (click)="openDialogDeleteCategory(category)">delete</mat-icon>
                 </td>
             </tr>
 
@@ -55,8 +55,8 @@
             <tr *ngFor="let supplier of listSupplier">
                 <td>{{ supplier.name }}</td>
                 <td class="text-align-end">
-                    <mat-icon color="primary" (click)="openDialogEditSupplier(supplier)">edit</mat-icon>
-                    <mat-icon color="warn" (click)="openDialogDeleteSupplier(supplier)">delete</mat-icon>
+                    <mat-icon class="icon-edit-delete" color="primary" (click)="openDialogEditSupplier(supplier)">edit</mat-icon>
+                    <mat-icon class="icon-edit-delete" color="warn" (click)="openDialogDeleteSupplier(supplier)">delete</mat-icon>
                 </td>
             </tr>
 
