--- a/src/app/help-site/help-site.component.html
+++ b/src/app/help-site/help-site.component.html
@@ -1,13 +1,57 @@
-<h1>About SIMPLE-CRM</h1>
+<h1>Über SIMPLE-CRM</h1>
+
+<p>Willkommen bei SIMPLE-CRM, Ihrer umfassenden CRM-App! Ein Customer Relationship Management (CRM) System ist eine
+    entscheidende Software, die Unternehmen dabei unterstützt, ihre Kundenbeziehungen effizient zu organisieren, zu
+    verwalten und zu verbessern.</p>
+
+<p>Meine CRM-App basiert auf dem CRUD-Prinzip, das für Create (Erstellen), Read (Lesen), Update (Aktualisieren) und
+    Delete (Löschen) steht. Dank der vielfältigen Funktionalitäten können Sie nicht nur Benutzer, sondern
+    auch Kunden, Artikel, Bestellungen, Lieferanten und Kategorien verwalten.
+</p>
+
+<p>Nachfolgend aufgeführt die Hauptfunktionen der App:</p>
+
+<ul>
+    <li><strong>Erstellen:</strong> Fügen Sie neue Benutzer, Kunden, Artikel, Bestellungen, Lieferanten und Kategorien
+        hinzu, um ein ganzheitliches Management Ihres Geschäfts zu ermöglichen.</li>
+    <li><strong>Details anschauen:</strong> Erhalten Sie detaillierte Einblicke in Benutzer, Kunden, Artikel und mehr,
+        um einen umfassenden Überblick über alle Aspekte Ihres Unternehmens zu haben.</li>
+    <li><strong>Daten bearbeiten:</strong> Aktualisieren Sie Informationen in allen Bereichen, um sicherzustellen, dass
+        Ihre Daten stets auf dem neuesten Stand sind.</li>
+    <li><strong>Daten löschen:</strong> Entfernen Sie bei Bedarf Daten aus der Datenbank, um Ihre Datenstruktur schlank
+        und effizient zu halten.</li>
+    <li><strong>Notizen:</strong> Erstellen Sie schnell einfache Notizen und weisen Sie diese Benutzern zu, um die
+        Kommunikation und Aufgabenverwaltung zu optimieren. (Für eine umfassende Aufgabenverwaltung, schauen Sie sich
+        gerne meine Kanban-App "JOIN" an: <a href="https://join.timo-kempf.de" target="_blank"><b>Direkt zur App</b></a>).</li>
+    <li><strong>Kundenhistorie:</strong> Betrachten Sie die vollständige Bestellhistorie von Kunden, um Trends und
+        Kundenpräferenzen besser zu verstehen.</li>
+
+
+
+
+</ul>
+
+<p>Zusätzlich bietet diese App ein Dashboard mit den wichtigsten Verkaufsstatistiken, um Ihnen einen schnellen Überblick
+    über die Performance Ihres Unternehmens zu geben. So haben Sie stets die wichtigsten Informationen auf einen Blick.
+</p>
+
+<p>Vielen Dank für die Nutzung von SIMPLE-CRM!</p>
+
+
+
+
+
+
+<!-- <h1>About SIMPLE-CRM</h1>
 
 <p>Willkommen auf meiner CRM-App! Ein Customer Relationship Management (CRM) System ist eine Software, die Unternehmen
     dabei unterstützt, ihre Kundenbeziehungen zu organisieren, zu verwalten und zu verbessern.</p>
 
 <p>Diese CRM-App basiert auf dem CRUD-Prinzip, das für Create (Erstellen), Read (Lesen), Update (Aktualisieren) und
-    Delete (Löschen) steht. Hier sind die Hauptfunktionen:</p>
+    Delete (Löschen) steht. Hier sind die Hauptfunktionen für Benutzer, Kunden, Artikel, Bestellungen:</p>
 
 <ul>
-    <li><strong>User erstellen:</strong> Mit unserer App können Sie neue Benutzer hinzufügen, um Kundeninformationen zu
+    <li><strong>Erstellen:</strong> Mit dieser App können Sie neue Benutzer, K hinzufügen, um Kundeninformationen zu
         erfassen.</li>
     <li><strong>User anschauen:</strong> Sie können die Details der Benutzer anzeigen, um einen Überblick über Ihre
         Kunden zu erhalten.</li>
@@ -16,4 +60,4 @@
     <li><strong>User löschen:</strong> Bei Bedarf können Sie Benutzer aus der Datenbank entfernen.</li>
 </ul>
 
-<p>Vielen Dank, dass Sie SIMPLE-CRM verwenden!</p>
+<p>Vielen Dank, dass Sie SIMPLE-CRM verwenden!</p> -->
