--- a/src/app/dialog-add-order/dialog-add-order.component.scss
+++ b/src/app/dialog-add-order/dialog-add-order.component.scss
@@ -77,3 +77,18 @@ th {
 .text-align-end {
     text-align: end !important;
 }
+
+
+@media (max-width: 850px) {
+
+    td,
+    th {
+        font-size: 12px;
+    }
+
+    mat-hint {
+        font-size: 10px;
+    }
+
+
+}
