--- a/src/app/dialog-edit-order/dialog-edit-order.component.scss
+++ b/src/app/dialog-edit-order/dialog-edit-order.component.scss
@@ -86,14 +86,17 @@ th {
     text-align: end !important;
 }
 
-mat-hint {
-    @media (max-width: 850px) {
-        font-size: 10px;
-    }
-}
 
 @media (max-width: 850px) {
-    td, th {
+
+    td,
+    th {
         font-size: 12px;
     }
+
+    mat-hint {
+        font-size: 10px;
+    }
+
+
 }
